[gd_scene load_steps=3 format=2]

[ext_resource path="res://Systems/State.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Weapons/ThrustAttack.gd" type="Script" id=2]

[node name="Attack" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="DurationTimer" type="Timer" parent="." index="0"]
wait_time = 0.1
one_shot = true

[node name="CooldownTimer" type="Timer" parent="." index="1"]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
